# gears_normalizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: gps_mapping.yaml  pois_mapping.yaml
gears/: __init__.py  cli.py
gears/normalize/: gps.py  schema.py
tests/: test_normalize_gps.py
tests/fixtures/: gps_vendor_a.csv  gps_vendor_b.csv
tests/fixtures/config/: gps_vendor_a.yaml  gps_vendor_b.yaml
